--- a/jwebppy/src/main/resources/static/portal/css/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/basic.css
@@ -263,6 +263,14 @@ input {
 	margin: 0;
 	padding: 0;
 }
+.split3 {
+	display: inline-block;
+	height: 10px;
+	/* background: #eee; */
+	width: 4px;
+	margin: 0;
+	padding: 0;
+}
 .split-row {
 	display: block;
 	height: 12px;
@@ -331,7 +339,7 @@ input {
 	color: #003081;
 	font-weight: 500;
 	text-align: left;
-	width: 13%;
+	width: 15%;
 	min-width: 100px;
 	padding: 6px 15px;
 }
