--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
@@ -18,23 +18,23 @@
 		<tbody>
 			<tr>
 				<th th:text="#{HQP_L_ORDER_TYPE}"></th>
-				<td id="KONDA_TEXT" style="width:250px;"></td>
+				<td id="KONDA_TEXT"></td>
 				<th th:text="#{HQP_L_SHIP_TO_PARTY}">
 				<td id="KUNAG_NAME"></td>
 			</tr>
 			<tr>
 				<th th:text="#{HQP_L_PO_NO}"></th>
 				<td id="BSTNK"></td>
-				<th th:text="#{HQP_L_SHIPPING_INFO}"></th>
-				<td>
+				<th th:text="#{HQP_L_SHIPPING_INFO}" rowspan="2"></th>
+				<td rowspan="2">
 					<table class="table-inner table-fixed">
 						<thead>
 							<tr>
-								<th th:text="#{HQP_L_SHIPPING_CONDITION}">Shipping Condition</th>
-								<th th:text="#{HQP_L_ROUTE}">Route</th>
-								<th th:text="#{HQP_L_PAYMENT_TERMS}">Payment terms</th>
-								<th th:text="#{HQP_L_INCOTERMS1}">Incoterms1</th>
-								<th th:text="#{HQP_L_INCOTERMS2}">Incoterms2</th>
+								<th th:text="#{HQP_L_SHIPPING_CONDITION}"></th>
+								<th th:text="#{HQP_L_ROUTE}"></th>
+								<th th:text="#{HQP_L_PAYMENT_TERMS}"></th>
+								<th th:text="#{HQP_L_INCOTERMS1}"></th>
+								<th th:text="#{HQP_L_INCOTERMS2}"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -51,7 +51,7 @@
 			</tr>
 			<tr>
 				<th th:text="#{HQP_L_RDD}"></th>
-				<td id="VDATU" colspan="3"></td>
+				<td id="VDATU"></td>
 			</tr>
 			<tr>
 				<th th:text="#{HQP_L_REMARKS}"></th>				
