--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/js.html
@@ -1,15 +1,16 @@
-<script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
-<script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fileDownload/1.4.2/jquery.fileDownload.min.js"></script>
 <script th:src="@{/platform/js/jquery/jquery.tablesort.min.js}"></script>
-<script th:src="@{/platform/js/jquery/jquery.fileDownload.js}"></script>
-<script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
-<script th:src="@{/platform/js/semantic/calendar.min.js}"></script>
-<script th:src="@{/platform/js/moment/moment.min.js}"></script>
-<script th:src="@{/platform/js/bluebird/bluebird.min.js}"></script>
-<script th:src="@{/platform/js/dropzone/dropzone.min.js}"></script>
-<script th:src="@{/platform/js/detect_browser/detect-browser.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.7.2/bluebird.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
 
+<!-- custom javascript library -->
 <script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.number.js}"></script>
@@ -28,3 +29,17 @@
 <script th:src="@{/platform/js/jWebppy.ui.calendar.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.tree.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.popup.js}"></script>
+
+<!--
+<script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.tablesort.min.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.fileDownload.js}"></script>
+<script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
+<script th:src="@{/platform/js/semantic/calendar.min.js}"></script>
+<script th:src="@{/platform/js/moment/moment.min.js}"></script>
+<script th:src="@{/platform/js/bluebird/bluebird.min.js}"></script>
+<script th:src="@{/platform/js/dropzone/dropzone.min.js}"></script>
+<script th:src="@{/platform/js/detect_browser/detect-browser.js}"></script>
+-->
