--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/css.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/css.html
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.min.css"/>
+
+<!--
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/semantic.min.css}" />
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/calendar.min.css}" />
-<link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/dropzone/dropzone.min.css}" />
+-->
