--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/popup/fragments/js.html
@@ -1,11 +1,13 @@
-<script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
-<script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
-<script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
-<script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
-<script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
-<script th:src="@{/portal/js/moment/moment.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fileDownload/1.4.2/jquery.fileDownload.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
 
 <!-- custom javascript library -->
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
@@ -20,4 +22,15 @@
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
-<script th:src="@{/portal/js/semantic/semantic.min.js}"></script>
+<script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
+<script th:src="@{/portal/js/portal.utils.order.js}"></script>
+
+<!-- in case of not working CDN
+<script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
+<script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
+<script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
+<script th:src="@{/portal/js/moment/moment.min.js}"></script>
+<script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
+-->
