--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -771,8 +771,10 @@
 				},//Req Qty
 				{name: "lotQty", data: "lotQty", title: "[[#{HQP_L_SALES_LOT}]]"},//Sales Lot
 				{name: "uom", data: "uom", title: "[[#{HQP_L_UOM}]]"},//UoM
-				{name: "netPrice", data: "netPrice", title: "[[#{HQP_L_UNIT_PRICE}]]"},//Net Price
-				{name: "netValue", data: "netValue", title: "[[#{HQP_L_TOTAL_PRICE}]]"},//Net Value
+				{name: "boQty", data: "boQty", title: "[[#{HQP_L_BACKORDER_QTY}]]"},//B/O Qty.
+				{name: "amDevPart", data: "amDevPart", title: "[[#{HQP_L_AM_DEV_PART}]]"},//AM Dev. No
+				{name: "netPrice", data: "netPrice", title: "[[#{HQP_L_NET_PRICE}]]"},//Net Price
+				{name: "netValue", data: "netValue", title: "[[#{HQP_L_NET_VALUE}]]"},//Net Value
 				{name: "availability", data: "availability", title: "[[#{HQP_L_AVAILABILITY}]]"},//Availability
 			],
 			ajax: {
